<resources>
    <string name="app_name">ALSET - Lecturer</string>
    <string name="title_activity_login">Login : ALSET- Leturer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="alset_lecturer">ALSET - Lecturer</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="set_password">Set New Password</string>
    <string name="set_a_new_password">Set a new Password</string>
    <string name="password_policy">Password must have a number, a lowercase letter, uppercase letter and a special character. And length should be between 6 to 16 characters.</string>
    <string name="view_attendance">View Attendance</string>
    <string name="start_new_class">Start New Class</string>
    <string name="select_the_class">Select the Class</string>
    <string name="select_the_module">Select the Module</string>
    <string name="select_the_date">Select The Date</string>
    <string name="select_start_time">Select Start Time</string>
    <string name="select_end_time">Select End Time</string>
    <string name="title_activity_new_class">ALSET - Create New Class</string>
    <string name="title_view_attendance">ALSET - View Attendance</string>
    <string name="select_a_class_to_view_the_attendance">Select a Class to view the attendance</string>
</resources>